Move to webpack

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,16 +5,14 @@ application {
   port: ${?APPLICATION_PORT}
 }
 
-sass {
-  dev {
-    sourcemap: inline
-  }
-
-  dist {
-    style: compressed
+kafka {
+  defaults: {
+    consumer: {
+      max.poll.records: 100
+      isolation.level: read_committed
+    }
   }
 }
-
 
 freemarker {
 }
