--- a/conf/assets.conf
+++ b/conf/assets.conf
@@ -1,32 +1,13 @@
 assets {
   fileset {
     vendor: [
-      static/vendor.scss
-
-      vendor/jquery/dist/jquery.js
-      vendor/popper.js/dist/umd/popper.js
-      vendor/bootstrap/dist/js/bootstrap.js
-      vendor/sweetalert2/dist/sweetalert2.all.js
-      vendor/turbolinks/dist/turbolinks.js
+      static/css/vendor.css
+      static/js/vendor.js
     ]
 
-    template: [
-      static/template.scss,
-      static/template.js
+    main: [
+      static/css/main.css,
+      static/js/main.js
     ]
-  }
-
-  pipeline {
-    dev: [sass]
-    dist: [sass]
-  }
-
-  sass {
-    dev {
-      sourcemap: inline
-    }
-    dist {
-      style: compressed
-    }
   }
 }
