--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,10 @@ dependencies {
     // kafka
     compile group: "org.apache.kafka", name: "kafka-clients", version: "2.0.+"
 
+    // utils
+    compile group: 'org.codehaus.httpcache4j.uribuilder', name: 'uribuilder', version: '2.0.0'
+    compile group: 'com.google.guava', name: 'guava', version: '26.0-jre'
+
     // debug
     compile group: "com.google.code.gson", name: "gson", version: "2.8.+"
     compileOnly group: "org.projectlombok", name: "lombok", version: "1.18.+"
@@ -100,7 +104,7 @@ task webpack(type: NodeTask, dependsOn: "npmInstall") {
     args = ["-p", "--progress", "--mode production"]
 }
 
-processResources.dependsOn "webpack"
+jar.dependsOn "webpack"
 
 clean.delete << file("public/static")
 
