Configuration display for topic & node

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ sourceSets.main.resources {
 }
 
 /**********************************************************************************************************************\
- * Node + Webpack
+ * Dependencies
  **********************************************************************************************************************/
 dependencies {
     // jooby
