Fix "" consumer group creation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,6 +10,8 @@ kafka {
     consumer: {
       max.poll.records: 100
       isolation.level: read_committed
+      group.id: KafkaHQ
+      enable.auto.commit: "false"
     }
   }
 }
