Fix webpack build on fatjar

--- a/build.gradle
+++ b/build.gradle
@@ -101,10 +101,12 @@ import com.moowork.gradle.node.task.NodeTask
 
 task webpack(type: NodeTask, dependsOn: "npmInstall") {
     script = project.file("node_modules/.bin/webpack")
+    outputs.dir("public/static")
     args = ["-p", "--progress", "--mode production"]
 }
 
 jar.dependsOn "webpack"
+processResources.dependsOn 'webpack'
 
 clean.delete << file("public/static")
 
