--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "popper.js": "^1.14.4",
     "sweetalert2": "^7.28.0",
+    "tempusdominus-bootstrap-4": "^5.1.2",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "1.0.0",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "2.0.0",
+    "imports-loader": "^0.8.0",
     "node-sass": "4.9.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -26,7 +30,7 @@
     "webpack-merge": "4.1.4"
   },
   "scripts": {
-    "dev": "NODE_ENV=dev node_modules/.bin/webpack-dev-server --progress --mode development",
+    "dev": "node_modules/.bin/webpack-dev-server --mode development",
     "watch": "node_modules/.bin/webpack --progress --mode development --watch",
     "build": "node_modules/.bin/webpack -p --progress --mode production"
   },
