--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "popper.js": "^1.14.4",
     "sweetalert2": "^7.28.0",
     "tempusdominus-bootstrap-4": "^5.1.2",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "urijs": "^1.19.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "0.1.19",
