--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "description": "Kafka GUI for topics, topics data, consumers group and more",
   "main": "index.js",
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.13.1",
     "jquery": "^3.3.1",
-    "moment": "^2.22.2",
-    "popper.js": "^1.14.4",
-    "sweetalert2": "^7.28.0",
+    "moment": "^2.23.0",
+    "popper.js": "^1.14.6",
+    "sweetalert2": "^7.33.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
     "turbolinks": "^5.2.0",
     "urijs": "^1.19.1"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "0.1.19",
-    "css-loader": "1.0.0",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.1.0",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "2.0.0",
+    "file-loader": "^3.0.1",
     "imports-loader": "^0.8.0",
-    "node-sass": "4.9.3",
+    "node-sass": "^4.11.0",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "url-loader": "1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-merge": "4.1.4"
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   },
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server --mode development",
