--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.13.1",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "sweetalert2": "^7.33.1",
