--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "bytes": "^3.0.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.13.1",
+    "humanize-duration": "^3.17.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "moment": "^2.23.0",
