--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Kafka GUI for topics, topics data, consumers group and more",
   "main": "index.js",
   "dependencies": {
+    "ace-builds": "^1.4.2",
     "bootstrap": "^4.2.1",
     "bytes": "^3.0.0",
     "font-awesome": "^4.7.0",
