--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,10 @@ test {
     }
 }
 
+if (project.hasProperty("test")) {
+    gradle.startParameter.excludedTaskNames += "npmInstall"
+}
+
 /**********************************************************************************************************************\
  * Node + Webpack
  **********************************************************************************************************************/
