--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
 plugins {
     id "com.moowork.node" version "1.2.0"
     id 'io.franzbecker.gradle-lombok' version '1.14'
+    id 'com.adarshr.test-logger' version '1.6.0'
 }
 
 apply plugin: "io.spring.dependency-management"
@@ -133,6 +134,28 @@ test {
     }
 }
 
+testlogger {
+    theme 'mocha'
+    showExceptions true
+    slowThreshold 2000
+    showStandardStreams true
+}
+
+task testKafkaCluster(type:JavaExec) {
+    group = 'verification'
+    description = 'Start a standalone test Kafka cluster'
+    classpath sourceSets.test.runtimeClasspath
+    main = "org.kafkahq.KafkaTestCluster"
+}
+
+task testInjectData(type:JavaExec) {
+    group = 'verification'
+    description = 'Start a standalone test Kafka cluster'
+    classpath sourceSets.test.runtimeClasspath
+    main = "org.kafkahq.KafkaTestCluster"
+    args "inject"
+}
+
 if (project.hasProperty("test")) {
     gradle.startParameter.excludedTaskNames += "npmInstall"
     gradle.startParameter.excludedTaskNames += "webpack"
@@ -144,6 +167,8 @@ if (project.hasProperty("test")) {
 import com.moowork.gradle.node.task.NodeTask
 
 task webpack(type: NodeTask, dependsOn: "npmInstall") {
+    group = 'build'
+    description = 'Build with webpack assets'
     script = project.file("node_modules/.bin/webpack")
     outputs.dir("public/static")
     args = ["-p", "--progress", "--mode production"]
