--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ plugins {
     id "com.moowork.node" version "1.2.0"
     id 'io.franzbecker.gradle-lombok' version '1.14'
     id 'com.adarshr.test-logger' version '1.6.0'
-    id "com.dorongold.task-tree" version "1.3.1"
+    id 'com.github.psxpaul.execfork' version '0.1.9'
 }
 
 apply plugin: "io.spring.dependency-management"
@@ -82,8 +82,12 @@ sourceSets.main.resources {
     srcDirs = ["conf", "public"]
 }
 
-joobyRun.dependsOn.remove("npmInstall")
-joobyRun.dependsOn.remove("webpack")
+gradle.taskGraph.whenReady { graph ->
+    if (graph.hasTask(joobyRun)) {
+        webpack.enabled = false
+        npmInstall.enabled = false
+    }
+}
 
 /**********************************************************************************************************************\
  * Dependencies
@@ -152,11 +156,28 @@ task testInjectData(type:JavaExec) {
     description = 'Start a standalone test Kafka cluster'
     classpath sourceSets.test.runtimeClasspath
     main = "org.kafkahq.KafkaTestCluster"
-    args "inject"
+    args ['inject']
 }
 
-check.dependsOn.remove("npmInstall")
-check.dependsOn.remove("webpack")
+
+gradle.taskGraph.whenReady { graph ->
+    if (graph.hasTask(test) || graph.hasTask(testKafkaCluster) || graph.hasTask(testInjectData)) {
+        webpack.enabled = false
+        npmInstall.enabled = false
+    }
+}
+
+test.dependsOn "startTestKafkaCluster"
+
+task startTestKafkaCluster(type: com.github.psxpaul.task.JavaExecFork) {
+    group = 'verification'
+    description = 'Start a global standalone test Kafka cluster during tests'
+    classpath = sourceSets.test.runtimeClasspath
+    main = 'org.kafkahq.KafkaTestCluster'
+    args ['1']
+    waitForOutput = 'Test data injected'
+    timeout = 600
+}
 
 /**********************************************************************************************************************\
  * Node + Webpack
@@ -168,7 +189,7 @@ task webpack(type: NodeTask, dependsOn: "npmInstall") {
     description = 'Build with webpack assets'
     script = project.file("node_modules/.bin/webpack")
     outputs.dir("public/static")
-    args = ["-p", "--progress", "--mode production"]
+    args = ["-p", "--mode production"]
 }
 
 jar.dependsOn "webpack"
