--- a/build.gradle
+++ b/build.gradle
@@ -169,7 +169,7 @@ gradle.taskGraph.whenReady { graph ->
 
 test.dependsOn "startTestKafkaCluster"
 
-task startTestKafkaCluster(type: com.github.psxpaul.task.JavaExecFork, dependsOn: 'classes') {
+task startTestKafkaCluster(type: com.github.psxpaul.task.JavaExecFork, dependsOn: 'testClasses') {
     group = 'verification'
     description = 'Start a global standalone test Kafka cluster during tests'
     classpath = sourceSets.test.runtimeClasspath
