--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ cache:
 
 script:
   - set -e
+  # Docker Login
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   # Gradle
   - ./gradlew --console=plain test
   - ./gradlew --console=plain jar
@@ -31,12 +33,14 @@ script:
   # Docker Tag
   - if [ ! -z "$TRAVIS_TAG" ]; then
       docker tag $TRAVIS_COMMIT tchiotludo/kafkahq:$TRAVIS_TAG;
+      docker push tchiotludo/kafkahq:$TRAVIS_TAG;
     fi
   # Docker Branch
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      echo docker tag $TRAVIS_COMMIT tchiotludo/kafkahq:latest;
-    elif [ ! -z "$TRAVIS_BRANCH" ]; then
-      echo docker tag $TRAVIS_COMMIT tchiotludo/kafkahq:$TRAVIS_BRANCH;
+      docker tag $TRAVIS_COMMIT tchiotludo/kafkahq:latest;
+    elif [ "$TRAVIS_BRANCH" == "travis" ]; then
+      docker tag $TRAVIS_COMMIT tchiotludo/kafkahq:$TRAVIS_BRANCH;
+      docker push tchiotludo/kafkahq:$TRAVIS_BRANCH;
     fi
   - set +e
 
@@ -49,11 +53,3 @@ deploy:
     file: docker/app/kafkahq.jar
     on:
       tags: true
-
-  - provider: script
-    script: |
-      echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push tchiotludo/kafkahq
-    on:
-      tags: true
-      all_branches: true
-      condition: $TRAVIS_BRANCH =~ ^develop|travis$
