--- a/application.example.yml
+++ b/application.example.yml
@@ -104,7 +104,7 @@ kafkahq:
       - group/read
       - group/delete
       - group/offsets/update
-      - user/read
+      - acls/read
       - registry/read
       - registry/insert
       - registry/update
