--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -127,7 +127,7 @@ kafkahq:
       - registry/update
       - registry/delete
       - registry/version/delete
-      - user/read
+      - acls/read
       - connect/read
       - connect/insert
       - connect/update
