--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -195,25 +195,25 @@ kafkahq:
 
     default-roles:
       - topic/read
-#      - topic/insert
-#      - topic/delete
-#      - topic/config/update
-#      - node/read
-#      - node/config/update
-#      - topic/data/read
-#      - topic/data/insert
-#      - topic/data/delete
-#      - group/read
-#      - group/delete
-#      - group/offsets/update
-#      - registry/read
-#      - registry/insert
-#      - registry/update
-#      - registry/delete
-#      - registry/version/delete
-#      - acls/read
-#      - connect/read
-#      - connect/insert
-#      - connect/update
-#      - connect/delete
-#      - connect/state/update
+      - topic/insert
+      - topic/delete
+      - topic/config/update
+      - node/read
+      - node/config/update
+      - topic/data/read
+      - topic/data/insert
+      - topic/data/delete
+      - group/read
+      - group/delete
+      - group/offsets/update
+      - registry/read
+      - registry/insert
+      - registry/update
+      - registry/delete
+      - registry/version/delete
+      - acls/read
+      - connect/read
+      - connect/insert
+      - connect/update
+      - connect/delete
+      - connect/state/update
