--- a/application.example.yml
+++ b/application.example.yml
@@ -111,14 +111,56 @@ kafkahq:
       - connect/delete
       - connect/state/update
 
+    # Groups definition
+    groups:
+      admin: # Group name
+        roles:  # roles for the group
+          - topic/read
+          - topic/insert
+          - topic/delete
+          - topic/config/update
+          - node/read
+          - node/config/update
+          - topic/data/read
+          - topic/data/insert
+          - topic/data/delete
+          - group/read
+          - group/delete
+          - group/offsets/update
+          - registry/read
+          - registry/insert
+          - registry/update
+          - registry/delete
+          - registry/version/delete
+          - acls/read
+          - connect/read
+          - connect/insert
+          - connect/update
+          - connect/delete
+          - connect/state/update
+        attributes:
+          # Regexp to filter topic available for group
+          topics-filter-regexp: "test.*"
+      topic-reader: # Other group
+        roles:
+          - topic/read
+        attributes:
+          topics-filter-regexp: "test\\.reader.*"
+
     # Basic auth configuration
     basic-auth:
       user: # Username
         password: pass # Password in sha256
-        roles: # Role for current users
-          - topic/read
-          - group/read
-          - group/delete
-        attributes:
-          # Regexp to filter topic available for current user
-          topics-filter-regexp: "test.*"
+        groups: # Groups for the user
+          - admin
+          - topic-reader
+
+    # Ldap Groups configuration (when using ldap)
+    ldap:
+      group:
+        group-ldap-1: # ldap group name
+          groups: # KafkaHQ groups list
+            - topic-reader
+        group-ldap-2:
+          groups:
+            - admin
