Add react to project

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,12 @@ micronaut:
       restart: false # enabled dev server with env vars MICRONAUT_IO_WATCH_RESTART=true
   router:
     static-resources:
-      static:
-        paths: classpath:static
-        mapping: "${kafkahq.server.base-path:}/static/**"
+      default:
+        enabled: true
+        mapping: "/**"
+        paths: "classpath:static"
   security:
-    enabled: true
+    enabled: false
     endpoints:
       login:
         enabled: true
