- Updated gradle.build - Disabled micronaut security - Updated docker-compose.yml - Updated application.yml

--- a/build.gradle
+++ b/build.gradle
@@ -261,6 +261,11 @@ copyClientResources.doFirst {
     }
 }
 
+task assembleServerAndClient(dependsOn: ['copyClientResources', ':shadowJar']) {
+    group = 'build'
+    description = 'Build combined server & client JAR'
+}
+
 jar.dependsOn "webpack"
 processResources.dependsOn 'webpack'
 
