--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
