--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "joi-validation": "^2.0.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
