--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
     "lodash": "^4.17.15",
+    "react-datetime-bootstrap": "^1.4.7",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
