--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,6 +76,18 @@ kafkahq:
       connect:
         - name: connect-1
           url: "http://localhost:8083"
+        - name: connect-2
+          url: "http://localhost:8082"
+    my-cluster2:
+      properties:
+        bootstrap.servers: localhost:9092
+      schema-registry:
+        url: "localhost:8086"
+      connect:
+        - name: connect-3
+          url: "http://localhost:8081"
+        - name: connect-4
+          url: "http://localhost:8085"
   server:
     base-path: ""
     access-log:
