--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
     annotationProcessor "io.micronaut:micronaut-security"
+    annotationProcessor 'org.projectlombok:lombok:1.18.+'
     compile "io.micronaut:micronaut-inject"
     compile "io.micronaut:micronaut-validation"
     compile ('io.micronaut:micronaut-views') {
@@ -144,6 +145,7 @@ dependencies {
 
     // utils
     compileOnly group: "org.projectlombok", name: "lombok", version: "1.18.+"
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.+'
     compile group: 'org.codehaus.httpcache4j.uribuilder', name: 'uribuilder', version: '2.0.0'
     compile group: 'com.google.guava', name: 'guava', version: '28.2-jre'
     compile group: "com.google.code.gson", name: "gson", version: "2.8.+"
