--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
+    "convert-units": "^2.3.4",
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
     "lodash": "^4.17.15",
-    "react-datetime-bootstrap": "^1.4.7",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
