AKHQ-70 Fix gradle build - Removed application.yml comments

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,8 +40,8 @@ micronaut:
       expire-after-write: 0s
 
 endpoints:
-#  all:
-#    path: "${kafkahq.server.base-path:}"
+  all:
+    path: "${kafkahq.server.base-path:}"
   health:
     enabled: true
     sensitive: false
