--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/pickers": "^3.2.10",
     "@popperjs/core": "^2.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -13,10 +16,12 @@
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-datepicker": "^2.14.0",
     "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
