Finished implementation of Produce to Topic

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "ace-builds": "^1.4.8",
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "convert-units": "^2.3.4",
@@ -20,6 +21,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.14.0",
     "react-datetime-bootstrap": "^1.4.7",
