--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "css-loader": "^3.4.1",
     "joi-validation": "^2.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^16.12.0",
